HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeReadMode/Source/Main.uv
//! Rejected key-system specimen for speculative execution without write mode.

public procedure speculativeReadModeReference() -> i32 {
    var shared_value: shared i32 = 1
    var observed: i32 = 0
    %speculative read shared_value {
        observed = shared_value
    }
    return observed
}
